Commit#27 Fixed OrderController and Persistence customer test